--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <h1 class="anim">Equilibrium #3429</h1>
       <p> Our Equilibrium collection promotes balance and calm.</p>
       <div id="eth">
-        <p><img class="icon" src="./images/icon-ethereum.svg"><span id="cyan">0.041 ETH</span><span id="clock">
-        <img class="icon" id="imgclock" src="./images/icon-clock.svg">3 days left</span></p>
+        <p id="et"><img class="icon" src="./images/icon-ethereum.svg"><span id="cyan">0.041 ETH</span></p>
+        <p id="clock"><img class="icon" id="imgclock" src="./images/icon-clock.svg">3 days left</p>
       </div>
       <hr/>
       <p id="creation"><img id="avatar" src="./images/image-avatar.png">Creation of <span class="anim">Jules Wyvern</span></p>
